# DSP-rust-algorithms

./: Cargo.toml  Dockerfile  build.rs
proto/: shift_planner.proto
src/: main.rs
src/algorithms/: csp.rs  greedy.rs  mod.rs
